Thu Mar 10 13:32:38 GMT 2005 (trog)
-----------------------------------
  * libclamav/special.c: Check Photoshop thumbnail images embedded in JPEG files.

  * sigtool/vba.c: Add more Word6 tokens.

Thu Mar 10 08:48:54 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	--detect-forged-local-address no longer gives false
				positives on emails which have the Sender
				header set (e.g. mailing lists)
			Use {mail_addr} if no From field is received

Mon Mar  7 11:24:43 GMT 2005 (njh)
----------------------------------
  * libclamav:		Added fast track visa system which reduces memory
				requirements for scanning some messages and
				also offers some improvement in scan times.
				Currently only implemented for uuencoded
				emails

Mon Mar  7 01:28:44 CET 2005 (tk)
---------------------------------
  * libclamav, clamd: add reference counter to cl_node and improve database
		      reload method in clamd (patch by Mark Pizzolato
		      <clamav-devel*subscriptions.pizzolato.net>)

Mon Mar  7 00:37:34 CET 2005 (tk)
---------------------------------
  * libclamav: add MD5 based false positive eliminator

Mon Mar  7 00:32:38 CET 2005 (tk)
---------------------------------
  * configure: add support for QNX 6 (patch by mikep*kaluga.org)

Sat Mar  5 11:07:34 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Note about --local needed if incoming socket is INET
				domain

Fri Mar  4 14:20:22 GMT 2005 (njh)
----------------------------------
  * libclamav/blob.c:	Fix for QNX version 6 sometimes returning ETOOLONG,
				patch from mikep at kaluga.org

Fri Mar  4 03:18:20 CET 2005 (tk)
---------------------------------
  * freshclam/manager.c: additional verbose-mode messages (Stephen Gran)

Fri Mar  4 02:47:17 CET 2005 (tk)
---------------------------------
  * docs: fix some typos (reported by Koryn Grant <koryn*endace.com> and
	  Paul Welsh <paul*welshfamily.com>)

Fri Mar  4 02:42:43 CET 2005 (tk)
---------------------------------